//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package custom_types;

message OptionMEx {
  optional MEx value = 1;
}

message OptionU64 {
  optional uint64 value = 1;
}

message VecDequeMEx {
  repeated MEx value = 1;
}

message VecDequeU32 {
  repeated uint32 value = 1;
}

message VecDequeU64 {
  repeated uint64 value = 1;
}

message VecMEx {
  repeated MEx value = 1;
}

message VecU32 {
  repeated uint32 value = 1;
}

message VecU64 {
  repeated uint64 value = 1;
}

message CustomEx {
  MEx mutex = 1;
  uint64 mutex_copy = 2;
  MEx mutex_custom = 3;
  uint64 mutex_copy_custom = 4;
  MEx arc = 5;
  uint64 arc_copy = 6;
  MEx arc_custom = 7;
  uint64 arc_copy_custom = 8;
  MEx boxed = 9;
  uint64 box_copy = 10;
  MEx boxed_custom = 11;
  uint64 box_copy_custom = 12;
  map<uint32, MEx> custom_map = 13;
  OptionMEx custom_option = 14;
  OptionU64 custom_option_copy = 15;
  VecU32 custom_vec_bytes = 16;
  VecDequeU32 custom_vec_deque_bytes = 17;
  VecU64 custom_vec_copy = 18;
  VecDequeU64 custom_vec_deque_copy = 19;
  VecMEx custom_vec = 20;
  VecDequeMEx custom_vec_deque = 21;
}

message MEx {
  uint64 id = 1;
}

